# aptstract

./: .gitignore  README.md  aptstract.pex  makefile  pyproject.toml  setup.cfg
.github/workflows/: pex.yaml
aptstract/: cli.py  paths.py  streamrun.py
aptstract/engines/: postgres.py
aptstract/services/: aptible.py  heroku.py
