[metadata]
name = aptstract
description = My package description
long_description = file: README.md
license = All Rights Reserved

[options]
packages =
  aptstract
install_requires =
  typer

[options.extras_require]
dev =
  black
  isort
  pytest

[options.entry_points]
console_scripts =
    aptstract = aptstract.cli:app
