[metadata]
name = aptstract
description = Aptible data migration CLI.
long_description = file: README.md
license = All Rights Reserved
version = 0.0.1
url='https://github.com/aptible/aptstract/'

[options]
packages =
  aptstract
install_requires =
  typer

[options.extras_require]
dev =
  black
  isort
  pytest
  twine
  build

[options.entry_points]
console_scripts =
    aptstract = aptstract.cli:app
